@startuml
'https://plantuml.com/class-diagram

interface IUserRepository{
  +User getUser(String email)
  +saveUser(User)
}

class UserRepository implements IUserRepository{
 -PlainDb db;
  +User getUser(String email)
  +saveUser(User)
}

class PlainDb{
+{static} PlainDb getInstance()
}

class AuthService{
    -IUserRepository repository
    +AuthService(IUserRepository)
    +login(String password, String username)
    +register(User)
}
IUserRepository "1" --o "1" AuthService: "contains"
UserRepository "1" o-- "1" PlainDb: "contains"
@enduml